--- a/app/lokana/package.json
+++ b/app/lokana/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
     "install": "^0.13.0",
+    "node-fetch": "^3.3.2",
     "node-gyp": "^10.0.1",
     "node-pre-gyp": "^0.17.0"
   },
